[gd_scene load_steps=14 format=3 uid="uid://by52tn7jaci2n"]

[ext_resource type="Script" uid="uid://dxey62134qud8" path="res://micro-games/match_three_tiles/scripts/mtt_main.gd" id="1_wr7xt"]
[ext_resource type="PackedScene" uid="uid://wbawult7xlmm" path="res://micro-games/match_three_tiles/tiles.tscn" id="2_en1pf"]
[ext_resource type="Shader" uid="uid://d0e67pxxvjyhf" path="res://Scripts/background_scroll_reversed.gdshader" id="3_uhabw"]
[ext_resource type="Texture2D" uid="uid://cqi5a70wp1121" path="res://micro-games/match_three_tiles/assets/Background-MTT-loop.png" id="4_uhabw"]
[ext_resource type="FontFile" uid="uid://defj25g2yve63" path="res://Assets/Typefaces/Knewave-Regular.ttf" id="5_lxiut"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uhabw"]
shader = ExtResource("3_uhabw")

[sub_resource type="Curve" id="Curve_uhabw"]
_limits = [0.0, 1.0, 0.244318, 1.0]
_data = [Vector2(0.244318, 0.258427), 0.0, 0.0, 0, 0, Vector2(0.761364, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_lxiut"]
_data = [Vector2(0.278409, 0.505618), 0.0, 0.0, 0, 0, Vector2(0.863636, 0.88764), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_k2j5l"]
offsets = PackedFloat32Array(0, 0.52, 1)
colors = PackedColorArray(0.745276, 0.61175, 1, 1, 1, 0.815225, 0.883901, 1, 0.929069, 0.927594, 0.670622, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k2j5l"]
line_spacing = 6.0
paragraph_spacing = 6.0
font = ExtResource("5_lxiut")
font_size = 28
font_color = Color(0.945098, 0.941176, 0.917647, 1)
outline_size = 8
outline_color = Color(0.530658, 0.353702, 0.707643, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.239216)
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_en1pf"]
bg_color = Color(0.941856, 0.941884, 0.853489, 0.779)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.904723, 0.725692, 0.956886, 0.685)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tqjw"]
bg_color = Color(0.893, 0.898, 0.773, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.243137)
shadow_size = 2
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhabw"]
bg_color = Color(0.894198, 0.516118, 0.922432, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MTT_Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wr7xt")
tile_base = ExtResource("2_en1pf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.941176, 0.917647, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_uhabw")
layout_mode = 0
offset_left = -67.0
offset_top = -16.0
offset_right = 445.0
offset_bottom = 864.0
texture = ExtResource("4_uhabw")
stretch_mode = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(207, 906)
emitting = false
amount = 200
lifetime = 3.0
one_shot = true
explosiveness = 0.9
emission_shape = 3
emission_rect_extents = Vector2(300, 1)
direction = Vector2(0, -10)
initial_velocity_min = 1200.0
initial_velocity_max = 1250.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = 360.0
angle_max = 360.0
scale_amount_min = 16.0
scale_amount_max = 32.0
split_scale = true
scale_curve_x = SubResource("Curve_uhabw")
scale_curve_y = SubResource("Curve_lxiut")
color_initial_ramp = SubResource("Gradient_k2j5l")

[node name="Board" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -84.0
offset_right = 84.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
vertical = true

[node name="CongratLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 11.5)
label_settings = SubResource("LabelSettings_k2j5l")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
offset_left = 21.0
offset_top = 672.0
offset_right = 369.0
offset_bottom = 788.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_en1pf")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(174.667, 32)
theme_override_constants/separation = 16
alignment = 1

[node name="PlayTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -779.0
offset_right = -26.0
offset_bottom = -752.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_6tqjw")
theme_override_styles/fill = SubResource("StyleBoxFlat_uhabw")
max_value = 10.0
show_percentage = false

[connection signal="timeout" from="PlayTimer" to="." method="_on_spot_timer_timeout"]
